fix margins on mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,6 @@ button:hover{
         background-size: cover;
         background-repeat: no-repeat;
         transition: background-image 1s ease-in-out;
-        margin: 10px;
         padding-bottom: 25px;
     }
     .sidebar {
